--- a/modelo/assets/css/main.css
+++ b/modelo/assets/css/main.css
@@ -1,6 +1,20 @@
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
 
+.rodape {
+  top: 100px;
+}
+/* .ytp-cued-thumbnail-overlay-image {
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+} */
+
 /*
 	Dimension by HTML5 UP
 	html5up.net | @ajlkn
@@ -63,11 +77,9 @@
 	}
 
 	@media screen and (max-width: 480px) {
-
 		html, body {
 			min-width: 320px;
 		}
-
 	}
 
 	body {
@@ -112,11 +124,9 @@
 		}
 
 		@media screen and (max-width: 360px) {
-
 			html {
 				font-size: 10pt;
 			}
-
 		}
 
 	body, input, select, textarea {
@@ -579,6 +589,7 @@
 		text-decoration: none;
 		border-bottom: none;
 		position: relative;
+    top: 50px;
 	}
 
 		.icon:before {
@@ -1226,7 +1237,7 @@
 		#header .logo {
 			width: 5.5rem;
 			height: 5.5rem;
-			line-height: 5.5rem;
+			line-height: 3.5rem;
 			border: solid 1px #ffffff;
 			border-radius: 100%;
 		}
